Improve code coverage capture fidelity
Prior to this revision, coverage would miss any tests that executed under
the @util._process_isolate decorator.  This decorator runs the annotated
test in a subprocess.  The reason to use the decorator for a test is if it
enters the capsicum sandbox, which cannot be cleanUp()'d in-process (can't
escape sandbox mode).

There were at least two problems: coverage.py (4.5.x) did not attempt to
emit coverage data for the separate-process tests, and even if it had,
opening an absolute path, as CoverageData::write_file() does, would not be
permitted in capability mode.

Both problems are solved by using the coverage API with an explicit
covrunner.py script, and some selective hijacking of internal coverage.py
methods.  covrunner.py preopens an fd to the coverage output directory
before running tests, and installs a ::write_file() method that utilizes the
cap.openat() convenience wrapper to emit the coverage data inside sandbox
mode.  covrunner.py also passes the Coverage object handle to the
@util._process_isolater implementation so that the child process can
explicitly save coverage data before exiting.

This increases reported branch coverage from 60% to 68%, and line coverage
from 75% to 83% (without changing the actual tests or library code).

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -20,6 +20,10 @@ freebsd_task:
     - uname -a
     - ( . e ; python$PB setup.py test )
   coverage_script:
-    - if [ "$PYVER" = "2" ]; then ( . e ; coverage-$PB run -m unittest tests.test_cap ) ; fi
-    - if [ "$PYVER" = "2" ]; then fetch -o u.sh https://codecov.io/bash ; fi
-    - if [ "$PYVER" = "2" ]; then ( . e ; bash u.sh -t "b7185a33-b156-402f-9a1d-b47dfd2f69bd" ) ; fi
+    # codecov.io seems to get confused if you upload two reports, and we'll get
+    # more coverage under 2.x due to the compat33 module.  So just run coverage
+    # under 2.
+    - if [ "$PYVER" != "2" ]; then exit 0 ; fi
+    - python2.7 covrunner.py
+    - fetch -o u.sh https://codecov.io/bash
+    - bash u.sh -t "b7185a33-b156-402f-9a1d-b47dfd2f69bd"
