--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,27 +3,19 @@ freebsd_task:
     image: freebsd-12-1-release-amd64
     cpu: 4
     memory: 8GB
-  env:
-    matrix:
-      - PYVER: 2
-      - PYVER: 3
   install_script:
     - uname -a
-    - if [ "$PYVER" = "2" ]; then echo "PA=27" >> e; echo "PB=2.7" >> e; echo "PATH=$(pwd):\$PATH" >> e; fi
-    - if [ "$PYVER" = "3" ]; then echo "PA=37" >> e; echo "PB=3.7" >> e; echo "PATH=$(pwd):\$PATH" >> e; fi
-    - ( . e ; echo '#!/bin/sh' > ./coverage; echo "coverage-$PB \"\$@\"" >> ./coverage; chmod +x ./coverage )
-    - ( . e ; pkg install -y python$PA py${PA}-cffi py${PA}-coverage bash )
+    - pkg install -y python27 py27-cffi py27-coverage python37 py37-cffi py37-coverage bash
   build_script:
-    - uname -a
-    - ( . e ; python$PB setup.py build )
+    - python2.7 setup.py build
+    - python3.7 setup.py build
   test_script:
-    - uname -a
-    - ( . e ; python$PB setup.py test )
+    - python2.7 setup.py test
+    - python3.7 setup.py test
   coverage_script:
-    # codecov.io seems to get confused if you upload two reports, and we'll get
-    # more coverage under 2.x due to the compat33 module.  So just run coverage
-    # under 2.
-    - if [ "$PYVER" != "2" ]; then exit 0 ; fi
+    # There is definitely some redundancy with test_script here.
     - python2.7 covrunner.py
+    - python3.7 covrunner.py
+    - coverage-3.7 xml
     - fetch -o u.sh https://codecov.io/bash
     - bash u.sh -t "b7185a33-b156-402f-9a1d-b47dfd2f69bd"
